# marimo-uv-starter-template

./: .gitignore  README.md  pyproject.toml
.zed/: settings.json
notebooks/: app.py  notebook.py
tests/: test_sample.py
